# fastapi_apiserver

./: Dockerfile  pyproject.toml
app/: main.py
app/api/v1/endpoints/: user.py
app/api/v1/schemas/: response.py  user.py
app/core/: config.py
app/db/: session.py
app/db/models/: user.py
app/utils/: logger.py
